--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,10 +1,13 @@
 .footer {
-  border: 1px solid yellow;
   width: 100%;
-  height: 5%;
+  height: 6%;
   align-self: flex-end;
   justify-content: center;
   display: flex;
   align-items: center;
   font-size: small;
+  background-color: thistle;
+}
+
+.footerText {
 }
