--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,20 +1,22 @@
 .header{
   border: 1px solid blue;
   width: 100%;
-  height: 10%;
+  height: max-content;
+
 }
 
 .header-text{
   margin: 0;
+}
+h1{
+  margin: 0 0 10px 0;
+
 }
 
 p{
   margin: inherit;
 }
 
-h1{
-  margin: inherit;
-}
 
 a {
  margin-left: 4px;;
