--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,16 +1,27 @@
-.header{
+.header {
   border: 1px solid blue;
   width: 100%;
   height: max-content;
-
+  display: flex;
+  justify-content: space-between;
 }
 
-.header-text{
+.header-text {
   margin: 0;
 }
+
+.header-img {
+  width: 60px;
+  height: 60px;
+  display: flex;
+}
+
+img {
+  width: 100%
+}
+
 h1{
   margin: 0 0 10px 0;
-
 }
 
 p{
