--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,20 +4,25 @@
   height: max-content;
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
 .header-text {
-  margin: 0;
+  margin: 0 0 0 20px;
+  border: 1px solid purple;
+
 }
 
 .header-img {
-  width: 60px;
-  height: 60px;
+  width: 30%;
+  height: 100%;
   display: flex;
+  border: 1px solid blue;
+  justify-content: center;
 }
 
 img {
-  width: 100%
+  width: 70%;
 }
 
 h1{
