--- a/src/components/pageblock/PageBlock.css
+++ b/src/components/pageblock/PageBlock.css
@@ -5,12 +5,12 @@
 
 .left{
   width: 70%;
-  height: max-content;
-
+  margin: 0 0 0 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .right{
   width: 30%;
   background-color: rgb(189, 187, 187);
-  height: 900px;
 }
