--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,16 +1,12 @@
 .header {
-  border: 1px solid blue;
-  width: 100%;
   height: max-content;
   display: flex;
   justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
+  background-color: rgb(79, 121, 206);
 }
 
 .header-text {
-  margin: 0 0 0 20px;
-  border: 1px solid purple;
   width: 70%;
 }
 
@@ -18,21 +14,21 @@
   width: 30%;
   height: 100%;
   display: flex;
-  border: 1px solid blue;
   justify-content: center;
+
 }
 
 .header-summary {
   text-align: justify;
   padding-right: 10px;
-  margin-top: 10px;;
+  margin-top: 10px;
 }
 
 img {
-  width: 70%;
-  height: 86%;
+  width: 73%;
+  height: 85%;
   border-radius: 100%;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 
 h1{
