--- a/src/components/pageblock/PageBlock.css
+++ b/src/components/pageblock/PageBlock.css
@@ -2,17 +2,17 @@
 .page-block {
   align-self: flex-start;
   padding: 20px;
-  margin: 20px 0 0 20px;
-
 }
 
 .left{
   width: 70%;
   display: flex;
   flex-direction: column;
+  padding: 0 20px;
 }
 
 .right{
   width: 30%;
   background-color: rgb(189, 187, 187);
+  padding: 0 20px;
 }
