--- a/src/components/itemBlock/ItemBlock.css
+++ b/src/components/itemBlock/ItemBlock.css
@@ -11,13 +11,26 @@
   margin-bottom: 5px;
 }
 
+.left
+.item-block-title {
+  font-size: large;
+}
+
+.timePeriod {
+  font-style: italic;
+  padding-left: 5px;
+}
+
+.description {
+  padding-left: 6px;
+}
 
 .item-block-image {
   width: 19px;
   height: 19px;
   margin-right: 3px;
   position: absolute;
-  left: -20px;
+  left: -24px;
 }
 
 
