--- a/src/components/pageblock/PageBlock.css
+++ b/src/components/pageblock/PageBlock.css
@@ -8,11 +8,11 @@
   width: 75%;
   display: flex;
   flex-direction: column;
-  padding: 0 35px;
+  padding-left: 65px;
 }
 
 .right{
   width: 25%;
-  background-color: rgb(189, 187, 187);
+  background-color: rgb(223, 218, 218);
   padding: 0 20px;
 }
